force-app/main/default/objects/Contact/fields/ACT_Id__c.field-meta.xml
<CustomField>
    <fullName>ACT_Id__c</fullName>
    <label>ACT Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>