force-app/main/default/objects/Contact/fields/Add_to_SDO_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Add_to_SDO_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to SDO Newsletter?</label>
    <type>Checkbox</type>
</CustomField>