force-app/main/default/objects/Contact/fields/Add_to_SUH_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Add_to_SUH_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adds to Startup Here Toronto newsletter.</description>
    <label>Add to SUH Newsletter?</label>
    <type>Checkbox</type>
</CustomField>