force-app/main/default/objects/Contact/fields/Added_to_EnterpriseTO_Mailing_List__c.field-meta.xml
<CustomField>
    <fullName>Added_to_EnterpriseTO_Mailing_List__c</fullName>
    <label>Add to ET Mailing List?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>