force-app/main/default/objects/Contact/fields/BIA_Member_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>BIA_Member_Company_Name__c</fullName>
    <description>Enter the BIA Member Company information i.e. the company they work for outside of the BIA.</description>
    <inlineHelpText>Enter the BIA Member Company information i.e. the company they work for outside of the BIA.</inlineHelpText>
    <label>BIA Member Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>