force-app/main/default/objects/Contact/fields/BRE_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>BRE_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adds clients to BRE newsletter.</description>
    <label>Add to BRE Newsletter?</label>
    <type>Checkbox</type>
</CustomField>