force-app/main/default/objects/Contact/fields/CloudingoAgent__MALA__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MALA__c</fullName>
    <label>Mailing Latitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>