force-app/main/default/objects/Contact/fields/CloudingoAgent__MALO__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MALO__c</fullName>
    <label>Mailing Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>