force-app/main/default/objects/Contact/fields/CloudingoAgent__MCD__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MCD__c</fullName>
    <label>Mailing Congressional District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>