force-app/main/default/objects/Contact/fields/CloudingoAgent__OALA__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__OALA__c</fullName>
    <label>Other Latitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>