force-app/main/default/objects/Contact/fields/CloudingoAgent__OALO__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__OALO__c</fullName>
    <label>Other Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>