force-app/main/default/objects/Contact/fields/CloudingoAgent__OCD__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__OCD__c</fullName>
    <label>Other Congressional District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>