force-app/main/default/objects/Contact/fields/Contact_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Integration_Source__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <description>This field will be used to capture the integration source whenever Contact record is created/updated from Form Assembly or Workato.</description>
    <inlineHelpText>This field will be used to capture the integration source whenever Contact record is created/updated from Form Assembly or Workato.</inlineHelpText>
    <label>Contact Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>