force-app/main/default/objects/Contact/fields/Contact_Type_Order__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_Order__c</fullName>
    <label>Contact Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
            <value>
                <fullName>D5</fullName>
            </value>
            <value>
                <fullName>I1</fullName>
            </value>
            <value>
                <fullName>I2</fullName>
            </value>
            <value>
                <fullName>I3</fullName>
            </value>
            <value>
                <fullName>I4</fullName>
            </value>
            <value>
                <fullName>I5</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>