force-app/main/default/objects/Contact/fields/Direct_phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_phone__c</fullName>
    <label>Direct phone</label>
    <type>Phone</type>
</CustomField>