force-app/main/default/objects/Contact/fields/ET_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>ET_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to ET Newsletter?</label>
    <type>Checkbox</type>
</CustomField>