force-app/main/default/objects/Contact/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <description>Extension Number</description>
    <label>Ext.</label>
    <type>Phone</type>
</CustomField>