force-app/main/default/objects/Contact/fields/IsPersonAccountCheck__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccountCheck__c</fullName>
    <formula>IF( IsPersonAccount == true, &#39;New&#39;, &#39;Existing&#39;)</formula>
    <label>IsPersonAccountCheck</label>
    <type>Text</type>
</CustomField>