force-app/main/default/objects/Contact/fields/Related_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Type__c</fullName>
    <formula>TEXT(Account.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related - Account Type</label>
    <type>Text</type>
</CustomField>