force-app/main/default/objects/Contact/fields/Resident_Canadian__c.field-meta.xml
<CustomField>
    <fullName>Resident_Canadian__c</fullName>
    <inlineHelpText>Resident Canadian (Note: At least 25% of the Directors must be resident Canadian)</inlineHelpText>
    <label>Resident Canadian</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>