force-app/main/default/objects/Contact/fields/Same_as_the_contact_information_provided__c.field-meta.xml
<CustomField>
    <fullName>Same_as_the_contact_information_provided__c</fullName>
    <label>Same as contact info provided above</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>