force-app/main/default/objects/Contact/fields/Secondary_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is new field to have a self lookup relation within contact to associate with other related contact replacing existing text field.
Help Text</description>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Child_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>