force-app/main/default/objects/Contact/fields/The_individual_is_INC_D1__c.field-meta.xml
<CustomField>
    <fullName>The_individual_is_INC_D1__c</fullName>
    <label>The individual is</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Director / Incorporator</fullName>
            </value>
            <value>
                <fullName>Director Only</fullName>
            </value>
            <value>
                <fullName>Incorporator Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>