force-app/main/default/objects/Contact/fields/Viber__c.field-meta.xml
<CustomField>
    <fullName>Viber__c</fullName>
    <description>Social media platform contact details.</description>
    <label>Viber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>