force-app/main/default/objects/Contact/fields/Wechat__c.field-meta.xml
<CustomField>
    <fullName>Wechat__c</fullName>
    <description>Social media platform contact details.</description>
    <label>Wechat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>