force-app/main/default/objects/Contact/fields/What_sapp__c.field-meta.xml
<CustomField>
    <fullName>What_sapp__c</fullName>
    <description>Social media platform contact details.</description>
    <label>Whatsapp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>