force-app/main/default/objects/Contact/validationRules/Account_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Required</fullName>
    <active>true</active>
    <description>This validation rule enforce to specify Account while creating any Contact records</description>
    <errorConditionFormula>AND(ISBLANK(AccountId),NOT(IsPersonAccount))</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account Name is required for Contact</errorMessage>
</ValidationRule>