force-app/main/default/objects/Contact/validationRules/Contact_Email_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Email_Validation_Rule</fullName>
    <active>true</active>
    <description>This rule will avoid creating Contact without specifying any value in Email field</description>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email can not be null for any Contact.</errorMessage>
</ValidationRule>