force-app/main/default/objects/Contact/validationRules/Contact_Mailing_Postal_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Mailing_Postal_Code_Validation</fullName>
    <active>true</active>
    <description>This Validation rule will check if Country is Canada than Postal code should be in correct format.</description>
    <errorConditionFormula>AND($User.ProfileId&lt;&gt;&#39;00eo0000000wf4I&#39;, 
MailingCountry = &quot;Canada&quot;, 
NOT(REGEX(MailingPostalCode, &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)),OR(ISNEW(),ISCHANGED(MailingPostalCode)) 
)</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Please Enter Valid Physical Postal Code</errorMessage>
</ValidationRule>