force-app/main/default/objects/Contact/validationRules/Contact_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Name_Validation_Rule</fullName>
    <active>true</active>
    <description>This rule will avoid creating Contact records that starts with special character.</description>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(FirstName)),NOT(REGEX((LEFT( FirstName, 1)), &quot;[a-zA-Z0-9]&quot;))), NOT(REGEX((LEFT( LastName, 1)), &quot;[a-zA-Z0-9]&quot;)))</errorConditionFormula>
    <errorMessage>Contact First or Last Name can not start with any special character.</errorMessage>
</ValidationRule>