force-app/main/default/objects/Contact/listViews/Contacts_Added_Today.listView-meta.xml
<ListView>
    <fullName>Contacts_Added_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/6/2019 12:00 PM</value>
    </filters>
    <label>Contacts - Added Today</label>
</ListView>