force-app/main/default/objects/Contact/listViews/Contacts_Modified_Today.listView-meta.xml
<ListView>
    <fullName>Contacts_Modified_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>3/9/2019 9:00 AM</value>
    </filters>
    <label>Contacts - Modified Today</label>
</ListView>