force-app/main/default/objects/Contact/listViews/ET_Channel_Partner_List.listView-meta.xml
<ListView>
    <fullName>ET_Channel_Partner_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>ET Channel Partner List</label>
</ListView>