force-app/main/default/objects/Contact/listViews/ET_Client_Story_Overview.listView-meta.xml
<ListView>
    <fullName>ET_Client_Story_Overview</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>ET - Client Story Overview</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_BIC</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>