force-app/main/default/objects/Contact/listViews/ET_Event_Attendees.listView-meta.xml
<ListView>
    <fullName>ET_Event_Attendees</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>ET - Event Attendees</label>
</ListView>